Fix broken CSS image link 3

--- a/theme/style.css
+++ b/theme/style.css
@@ -89,7 +89,7 @@ main {
 }
 
 .parallax {
-    background-image: url(../img/bgIndex.jpg);
+    background-image: url("../img/bgIndex.jpg");
     height: 600px;
     background-attachment: fixed;
     background-position: center;
